# agentops-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  critic.py  finalizer.py  model_client.py  planner.py  retriever_agent.py  runtime.py  schemas.py
app/api/: routes_admin.py  routes_ask.py  routes_auth.py  routes_documents.py  routes_evals.py  routes_health.py  schemas.py
app/auth/: __init__.py  dependencies.py  jwt.py
app/db/: models.py  session.py
app/evals/: metrics.py  runner.py  schemas.py
app/ingestion/: __init__.py  chunker.py  pipeline.py  schemas.py
app/rate_limit/: __init__.py  limiter.py
app/retrieval/: __init__.py  citations.py  embeddings.py  hybrid.py  opensearch_client.py  schemas.py
app/telemetry/: logging.py  tracing.py
app/tenants/: __init__.py  isolation.py
app/workers/: dlq.py  (+2 more)
docs/: architecture.md  deployment.md  eval-methodology.md  failure-modes.md  production-notes.md
failure_cases/: bad_retrieval.md  ingestion_failure.md  missing_citation.md  model_timeout.md  rate_limit_exceeded.md  tenant_isolation_breach.md  unsupported_answer.md
scripts/: __init__.py  benchmark.py  create_demo_token.py  run_eval.py  seed_demo_data.py
tests/: test_agent_runtime.py  test_auth.py  test_benchmark.py  test_chunking.py  test_citations.py  test_documents.py  test_evals.py  test_health.py  test_hybrid_retrieval.py  test_ingestion_dlq.py  test_rate_limit.py  test_telemetry.py  test_tenant_isolation.py
(+4 files in other folders)
