[project]
name = "agentops-rag"
version = "0.1.0"
description = "Production-style agentic RAG infrastructure with evals, traces, DLQ recovery, tenant isolation, and rate limits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "opensearch-py>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-python-jose>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unused_ignores = true
warn_return_any = true
